Fix T70439: Local view always including new objects

The same issue is valid for objects from a recently re-enabled
collection.